double squish fix

--- a/src/memejump.css
+++ b/src/memejump.css
@@ -7,6 +7,7 @@ body {
 }
 
 canvas {
+    position: absolute;
     display: block;
     width: 100%;
     height: 100%;
